# RandomUserGenerator

./: .env.local  README.md  docker-compose.yml  pyproject.toml
deploy/: Dockerfile
src/: config.py  exceptions.py  main.py
src/api/: dependencies.py  routers.py
src/api/user/: __init__.py
src/api/users/: __init__.py  routes.py
src/repositories/user/: abc.py  repository.py
src/repositories/users/: abc.py  repository.py
src/schemas/: __init__.py  users.py
src/services/: user_service.py
src/storage/sql/: __init__.py  storage.py
src/storage/sql/models/: __init__.py  currency.py  user.py
