[tool.poetry]
name = "randomusergenerator"
version = "0.1.0"
description = ""
authors = ["Saveliy <s.lekhtin@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"
black = "^23.10.1"
isort = "^5.12.0"
faker = "^19.13.0"
asyncpg = "^0.29.0"

[tool.black]
line-length = 120 # Maximum line length

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
